[gd_scene load_steps=8 format=2]

[ext_resource path="res://storagebox/StorageBox.gd" type="Script" id=1]
[ext_resource path="res://storagebox/BrassKey.tscn" type="PackedScene" id=2]
[ext_resource path="res://storagebox/storagebox_body.png" type="Texture" id=3]
[ext_resource path="res://storagebox/brass_key.png" type="Texture" id=4]
[ext_resource path="res://storagebox/Cover.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=2]

resource_name = "storagebox_animation_open"
length = 1.0
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Cover_left/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -21, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cover_left/Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( -1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cover_left/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -21, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cover_left/CollisionShape2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( -1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Cover_right/Sprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 21, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Cover_right/Sprite:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( -1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Cover_right/CollisionShape2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 21, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Cover_right/CollisionShape2D:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( -1, 1 ) ]
}

[node name="StorageBox" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="BrassKey" parent="." index="0" instance=ExtResource( 2 )]

[node name="Sprite_body" type="Sprite" parent="." index="1"]

texture = ExtResource( 3 )
_sections_unfolded = [ "Offset" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="." index="2"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]

visible = false
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Cover_left" parent="." index="4" instance=ExtResource( 5 )]

position = Vector2( -12, 0 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" parent="Cover_left" index="1"]

_sections_unfolded = [ "Transform" ]

[node name="Cover_right" parent="." index="5" instance=ExtResource( 5 )]

position = Vector2( 12, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" parent="Cover_right" index="0"]

flip_h = true

[node name="CollisionShape2D" parent="Cover_right" index="1"]

_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/storagebox_animation_open = SubResource( 2 )
blend_times = [  ]

[connection signal="body_entered" from="." to="." method="_on_StorageBox_body_entered"]

[connection signal="body_entered" from="BrassKey" to="." method="_on_BrassKey_body_entered"]


[editable path="Cover_left"]
[editable path="Cover_right"]
